--- a/server_side/dice_roller/requirements.txt
+++ b/server_side/dice_roller/requirements.txt
@@ -1,29 +1,7 @@
-appdirs==1.4.4
-arrow==1.3.0
-binaryornot==0.4.4
-certifi==2025.7.9
-chardet==5.2.0
-charset-normalizer==3.4.2
-circup==2.2.2
-click==8.2.1
-cookiecutter==2.6.0
-idna==3.10
+blinker==1.9.0
+click==8.3.0
+Flask==3.1.2
+itsdangerous==2.2.0
 Jinja2==3.1.6
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mpremote==1.25.0
-Pygments==2.19.2
-pyserial==3.5
-python-dateutil==2.9.0.post0
-python-slugify==8.0.4
-PyYAML==6.0.2
-requests==2.32.4
-rich==14.1.0
-semver==3.0.4
-six==1.17.0
-text-unidecode==1.3
-toml==0.10.2
-types-python-dateutil==2.9.0.20250809
-update-checker==0.18.0
-urllib3==2.5.0
+MarkupSafe==3.0.3
+Werkzeug==3.1.3
