--- a/server_side/docker-compose.yml
+++ b/server_side/docker-compose.yml
@@ -20,3 +20,8 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    ports:
+      - 3000:3000
