--- a/server_side/docker-compose.yml
+++ b/server_side/docker-compose.yml
@@ -25,3 +25,18 @@ services:
     image: grafana/grafana
     ports:
       - 3000:3000
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+  dice-roller:
+    container_name: dice-roller
+    build:
+      context: ./dice_roller
+      dockerfile: Dockerfile
+    ports:
+      - 8000:8000
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
