Got datasource provisioning working.

--- a/server_side/docker-compose.yml
+++ b/server_side/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     image: grafana/grafana
     ports:
       - 3000:3000
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
     deploy:
       replicas: 1
       restart_policy:
