Attempt to auto provision a dashboard.

--- a/server_side/docker-compose.yml
+++ b/server_side/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - 3000:3000
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
     deploy:
       replicas: 1
       restart_policy:
